correcting effin overlaps

--- a/tt-style.css
+++ b/tt-style.css
@@ -121,7 +121,6 @@ float: left;
 }
 
 td{
-  padding = 0px; !important
   overflow: hidden;
   display: table-cell;
   white-space: nowrap; !important
